crates/ferrum-interfaces/tests/ui/vnext/fail/resolved_value_has_no_lossy_resource_id.rs
use ferrum_interfaces::vnext::ResolvedValueBinding;

fn first_component(binding: &ResolvedValueBinding) {
    let _ = binding.resource_id();
}

fn main() {}
